# Tools_CMake

./: README.md
cmake_print/: .gitignore  CMakeLists.txt  main.cpp  print.h
cmake_print_lib/: CMakeLists.txt
cmake_print_lib/main/: CMakeLists.txt  main.cpp
cmake_print_lib/print/: CMakeLists.txt
cmake_print_lib/print/src/: print.cpp
elementary/: CMakeLists.txt
elementary/mathlib/: CMakeLists.txt  cmake_files.cmake
elementary/mathlib/include/: add_variadic.h  pow.h
elementary/mathlib/src/: add.cpp  add_variadic.cpp  mul.cpp  pow.cpp
elementary/test/: CMakeLists.txt  catch2_test.cpp  simple_test.cpp
